fixed img centering issues on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -376,6 +376,11 @@ a:hover {
   display: block;
 }
 
+.img-lg {
+  width: 100%;
+  margin: auto;
+}
+
 }
 
 @media only screen and (min-width: 551px) and (max-width: 1000px) {
